--- a/3.subway.html
+++ b/3.subway.html
@@ -25,14 +25,20 @@
 
 
         <h2>1. 샌드위치 선택</h2>
-
+        <div>
         <input type="radio" name="choice" id="에그 마요" value="html">
         <label for="에그 마요">에그 마요</label>
+        </div>
+        <div>
         <input type="radio" name="choice" id="이탈리안 비엠티" value="html">
         <label for="이탈리안 비엠티">이탈리안 비엠티</label>
+        </div>
+        <div>
         <input type="radio" name="choice" id="터키 베이컨 아보카도" value="html">
         <label for="터키 베이컨 아보카도">터키 베이컨 아보카도</label>
-            
+        </div>  
+
+        <hr>
 
         <h2>2. 사이즈 선택</h2>
 
@@ -48,24 +54,30 @@
             <option value="플렛브레드" disabled>플렛브레드</option>
         </select>
 
-        <h2>4. 야채/소스</h2>
+        <hr>
 
+        <h2>4. 야채/소스</h2>
+        <div>
         <input type="checkbox" name="food1" value="토마토" id="food1">
         <label for="food1">토마토</label>
-
+        </div>
+        <div>
         <input type="checkbox" name="food2" value="오이" id="food2">
         <label for="food2">오이</label>
-
+        </div>
+        <div>
         <input type="checkbox" name="food3" value="할라피뇨" id="food3">
         <label for="food3">할라피뇨</label>
-
+        </div>
+        <div>
         <input type="checkbox" name="food4" value="핫 칠리" id="food4">
         <label for="food4">핫 칠리</label>
-
+        </div>  
+        <div>
         <input type="checkbox" name="food5" value="바베큐" id="food5">
         <label for="food5">바베큐</label>
-
-        <input type="submit">
+        </div>
+        <input type="submit" value="확인">
 
     </form>
 
