--- a/1.index.html
+++ b/1.index.html
@@ -28,11 +28,15 @@
     <strong>Lorem ipsum</strong> <em>dolor</em> sit amet, consectetur adipisicing elit. Esse accusamus eius aspernatur rerum reprehenderit vero quam, fugit fuga veritatis quae explicabo eum ullam harum atque. Nulla delectus impedit nesciunt ea!
   </p>
 
+<!-- <b></b> : 굵게 표시, <strong></strong> : 매우 중요, 긴급, 경고 -->
+
   <a href="https://google.com">구글</a>
   <a href="https://naver.com" target="_blank">네이버</a>
 
+  <!-- target="_blank" : 링크를 새 창에서 여는 기능 -->
+
   <img src="https://picsum.photos/200/300" alt="">
-  <img src="./assets/dog.jpg" alt="강아지" width="300" height="300">
+  <img src="./assets/image/dog.jpg" alt="강아지" width="300" height="300">
 
   <table style="border: 1px solid">
     <tr>
@@ -72,3 +76,5 @@
 </body>
 
 </html>
+
+
